--- a/packages/design-system/tsconfig.build.json
+++ b/packages/design-system/tsconfig.build.json
@@ -2,5 +2,5 @@
 {
   "extends": "./tsconfig",
   "include": ["src"],
-  "exclude": ["**/*.stories.tsx"]
+  "exclude": ["**/*.stories.tsx","**/*.test.tsx"],
 }
