--- a/examples/loggerdemo/package.json
+++ b/examples/loggerdemo/package.json
@@ -25,11 +25,11 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/react-native-logger": "workspace:^",
-    "expo": "~51.0.21",
+    "expo": "^51.0.24",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-router": "~3.5.18",
+    "expo-router": "~3.5.20",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
