--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -43,6 +43,7 @@
   "peerDependencies": {
     "@expo/vector-icons": "*",
     "@gorhom/bottom-sheet": "*",
+    "@react-native-async-storage/async-storage": "*",
     "@react-navigation/native": "*",
     "@siteed/react-native-logger": "*",
     "expo": "*",
@@ -74,7 +75,7 @@
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@siteed/react-native-logger": "0.8.2",
+    "@siteed/react-native-logger": "workspace:^",
     "@size-limit/preset-big-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
