--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -75,7 +75,7 @@
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@siteed/react-native-logger": "workspace:^",
+    "@siteed/react-native-logger": "^0.9.3",
     "@size-limit/preset-big-lib": "^11.1.2",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
