--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/design-system",
-  "version": "0.10.2",
+  "version": "0.10.3",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
   "repository": {
@@ -31,7 +31,7 @@
     "storybook": "storybook dev -p 6060",
     "build:storybook": "NODE_ENV=production storybook build",
     "deploy:storybook": "rimraf storybook-static && yarn build:storybook && gh-pages -t -d storybook-static --dest design-system-storybook",
-    "release": "yarn clean && yarn build && npm publish"
+    "release": "./release.sh"
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
@@ -63,7 +63,7 @@
     "@evilmartians/lefthook": "^1.6.7",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "5.0.0-alpha.11",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/eslint-config": "^3.2.0",
     "@react-native-community/slider": "^4.5.0",
@@ -108,7 +108,7 @@
     "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
-    "expo": "^51.0.21",
+    "expo": "^51.0.31",
     "expo-clipboard": "~6.0.3",
     "expo-localization": "~15.0.3",
     "expo-module-scripts": "3.4.2",
@@ -119,7 +119,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-jazzicon": "^0.1.2",
     "react-native-paper": "^5.12.5",
