--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -46,6 +46,7 @@
     "@babel/core": "^7.20.0",
     "@types/gh-pages": "^6",
     "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
     "gh-pages": "^6.1.1",
