--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -52,6 +52,7 @@
     "react-native": "*",
     "react-native-gesture-handler": "*",
     "react-native-paper": "*",
+    "react-native-paper-dates": "*",
     "react-native-vector-icons": "*"
   },
   "devDependencies": {
@@ -125,6 +126,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-jazzicon": "^0.1.2",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dates": "^0.22.25",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "^15.1.0",
