--- a/examples/designdemo/package.json
+++ b/examples/designdemo/package.json
@@ -19,10 +19,19 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@formatjs/intl-datetimeformat": "^6.12.5",
+    "@formatjs/intl-displaynames": "^6.6.8",
+    "@formatjs/intl-getcanonicallocales": "^2.3.0",
+    "@formatjs/intl-listformat": "^7.5.7",
+    "@formatjs/intl-locale": "^4.0.0",
+    "@formatjs/intl-numberformat": "^8.10.3",
+    "@formatjs/intl-pluralrules": "^5.2.14",
+    "@formatjs/intl-relativetimeformat": "^11.2.14",
     "@gorhom/bottom-sheet": "^5.0.0-alpha.11",
     "@react-navigation/drawer": "^6.6.15",
     "@siteed/design-system": "workspace:^",
     "@siteed/react-native-logger": "workspace:^",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.31",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
@@ -35,7 +44,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-localize": "^3.2.1",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-dates": "^0.22.25",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
