--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -106,6 +106,7 @@
     "babel-plugin-react-native-web": "^0.19.10",
     "bundle-size": "^1.1.5",
     "commitlint": "^19.2.1",
+    "date-fns": "^4.0.0-beta.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
