--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -25,7 +25,7 @@
     "build:tsc": "tsc",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --cache \"src/**/*.{js,ts,tsx}\"",
-    "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
+    "lint:fix": "yarn lint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path ../../.gitignore",
     "size": "bundle-size && size-limit",
     "storybook": "storybook dev -p 6060",
@@ -81,16 +81,15 @@
     "@storybook/addon-essentials": "^8.3.0",
     "@storybook/addon-interactions": "^8.3.0",
     "@storybook/addon-links": "^8.3.0",
+    "@storybook/addon-mdx-gfm": "^8.3.0",
     "@storybook/addon-onboarding": "^8.3.0",
     "@storybook/addon-react-native-web": "^0.0.24",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
     "@storybook/blocks": "^8.3.0",
-    "@storybook/jest": "^0.2.3",
     "@storybook/react": "^8.3.0",
     "@storybook/react-webpack5": "^8.3.0",
     "@storybook/test": "^8.3.0",
     "@storybook/test-runner": "^0.19.1",
-    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react-native": "^12.4.4",
     "@types/eslint": "^8",
