--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
+    "color": "^4.2.3",
     "i18n-js": "^4.4.3",
     "i18next": "^23.10.1",
     "intl-pluralrules": "^2.0.1",
@@ -92,6 +93,7 @@
     "@storybook/test-runner": "^0.19.1",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/react-native": "^12.4.4",
+    "@types/color": "^3.0.6",
     "@types/eslint": "^8",
     "@types/gh-pages": "^6",
     "@types/jest": "^29.5.12",
