--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -44,6 +44,7 @@
   "peerDependencies": {
     "@expo/vector-icons": "*",
     "@gorhom/bottom-sheet": "*",
+    "@gorhom/portal": "*",
     "@react-native-async-storage/async-storage": "*",
     "@react-native-community/slider": "*",
     "@react-navigation/native": "*",
@@ -55,6 +56,7 @@
     "react-native-gesture-handler": "*",
     "react-native-paper": "*",
     "react-native-paper-dates": "*",
+    "react-native-screens": "*",
     "react-native-vector-icons": "*"
   },
   "devDependencies": {
@@ -66,6 +68,7 @@
     "@evilmartians/lefthook": "^1.6.7",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "5.0.0-alpha.11",
+    "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/eslint-config": "^3.2.0",
@@ -132,6 +135,7 @@
     "react-native-paper-dates": "^0.22.25",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
