--- a/packages/react-native-logger/tsconfig.jest.json
+++ b/packages/react-native-logger/tsconfig.jest.json
@@ -4,9 +4,12 @@
     // ensure that nobody can accidentally use this config for a build
     "noEmit": true,
     "verbatimModuleSyntax": false,
+    "types": ["jest", "node"]
   },
   "include": [
     "./src",
+    "./src/**/*.test.ts",
+    "./src/**/*.test.tsx"
   ],
   "exclude": ["dist/**", "node_modules"]
 }
