--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -26,8 +26,8 @@
     "build:tsc": "tsc --project tsconfig.build.json",
     "typecheck": "tsc -p tsconfig.test.json --noEmit && tsc -p tsconfig.json --noEmit",
     "test": "jest",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "eslint \"**/*.ts\"",
+    "lint:fix": "eslint \"**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
     "release": "node ./dist/bin/publisher.js publish",
     "publisher": "ts-node bin/publisher.ts",
@@ -56,7 +56,7 @@
     "@types/update-notifier": "^6.0.5",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^9.0.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
