--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -31,6 +31,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
     "release": "node ./dist/bin/publisher.js publish",
     "publisher": "ts-node bin/publisher.ts",
+    "publisher:debug": "DEBUG=true node --inspect -r ts-node/register bin/publisher.ts",
     "prepare": "husky install"
   },
   "dependencies": {
