--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@siteed/publisher",
-  "version": "0.1.0",
+  "version": "0.2.2",
   "description": "Flexible release management tool for JavaScript/TypeScript monorepos",
   "author": "Arthur Breton <abreton@siteed.net> (https://github.com/deeeed)",
   "license": "MIT",
@@ -65,6 +65,7 @@
     "lint-staged": "^15.1.0",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
+    "tar": "^7.4.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
