--- a/packages/design-system/tsconfig.eslint.json
+++ b/packages/design-system/tsconfig.eslint.json
@@ -14,7 +14,8 @@
     ".storybook/main.ts",
     ".storybook/preview.tsx",
     "./rollup.config.js",
-    "release-it.js"
+    "release-it.js",
+    "publisher.config.ts"
   ],
   "exclude": ["dist/**", "node_modules"]
 }
