--- a/packages/publisher/package.json
+++ b/packages/publisher/package.json
@@ -38,6 +38,7 @@
     "chalk": "4.1.2",
     "commander": "^11.1.0",
     "conventional-changelog": "^5.1.0",
+    "date-fns": "^4.1.0",
     "execa": "^5.1.1",
     "globby": "^11.1.0",
     "inquirer": "^8.2.6",
