--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -24,24 +24,27 @@
     "build:clean": "yarn clean && yarn build",
     "build:tsc": "tsc --project tsconfig.build.json",
     "typecheck": "tsc -p tsconfig.test.json --noEmit && tsc -p tsconfig.json --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"**/*.ts\"",
+    "lint:fix": "eslint \"**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\""
   },
   "dependencies": {
     "commander": "^11.1.0"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@siteed/publisher": "workspace:^",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "ts-jest": "^29.1.1",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "@jest/types": "^29.6.3",
     "typescript": "^5.2.2"
   }
 }
