--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -30,6 +30,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\""
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "commander": "^11.1.0"
   },
   "devDependencies": {
