--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -18,30 +18,44 @@
     "package.json",
     "README.md"
   ],
+  "bin": "./dist/src/cli.js",
+  "type": "module",
   "scripts": {
     "clean": "rimraf ./dist",
     "build": "yarn build:tsc",
     "build:clean": "yarn clean && yarn build",
     "build:tsc": "tsc --project tsconfig.build.json",
     "typecheck": "tsc -p tsconfig.test.json --noEmit && tsc -p tsconfig.json --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"**/*.ts\"",
+    "lint:fix": "eslint \"**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"bin/**/*.ts\"",
+    "start": "ts-node src/cli.ts",
+    "dev": "NODE_OPTIONS='--loader ts-node/esm --experimental-specifier-resolution=node' ts-node --esm src/cli.ts",
+    "link": "yarn link",
+    "test:cli": "NODE_OPTIONS='--loader ts-node/esm --experimental-specifier-resolution=node' ts-node --esm src/test-cli.ts",
+    "postbuild": "chmod +x ./dist/src/cli.js",
+    "link-cli": "yarn link && yarn run postbuild",
+    "setup": "./setup-cli.sh",
+    "unsetup": "yarn global unlink"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "commander": "^11.1.0"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@siteed/publisher": "workspace:^",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "ts-jest": "^29.1.1",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "@jest/types": "^29.6.3",
     "typescript": "^5.2.2"
   }
 }
